# file-system

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ai_project_log.json  alembic.ini  app.py  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_cache_fix.py  testmime.py
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  564309b85187_test_migration.py  58f79584900e_.py  aea86094dad1_.py
diagrams/: FileRepository.md  test_tenant_testcontainers.py
docs/: MIGRATIONS.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/embeddings/: page.tsx
frontend/app/files/: page.tsx
frontend/app/tenants/: page.tsx
frontend/components/: file-row.tsx  json-editor.tsx  navbar.tsx  tenant-select.tsx
frontend/lib/: api.ts  constants.ts  swr.ts  types.ts
k8s/: configmap.yaml  extraction-service.yaml  file-service.yaml  migrations.yaml  namespace.yaml  postgres.yaml  redis.yaml
scripts/: start_all.sh
src/extraction_service/: app.py  config.py  crud.py  models.py  routes.py  schemas.py  services.py
src/extraction_service/tests/: test_extraction.py  test_integration.py
src/file_service/: README.md  app.py  config.py  crud.py  models.py  routes.py  schemas.py  services.py  tenant_config.yaml  utils.py
src/file_service/crud/: file.py  tenant.py
src/file_service/routes/: files.py  tenant.py
src/file_service/services/: __init__.py  file_service.py  tenant_service.py
src/file_service/tests/: test_file.py  test_integration.py  test_tenant.py
src/shared/: cache.py  config.py  db.py  migrations.py  rate_limiter.py  utils.py
src/shared/tests/: test_cache.py  test_config.py  test_db.py  test_migrations.py  test_utils.py
tests/: conftest.py  test_both.py  test_cache.py  test_cache_keys.py  test_db_creation.py  test_end_to_end.py  test_extraction_schemas.py  test_extraction_service_basic.py  test_file_routes.py  test_file_schemas.py  test_file_service_basic.py  test_gateway.py  test_gateway_proxy_headers.py  test_gateway_v1_deprecation.py  test_service1.py  test_service2.py  test_tenant.py  test_tenant_routes.py  test_tenant_testcontainers.py
